# external

./: DuerClientSDK  README.md  adb  app  bluetooth_bsa  broadcom_bsa  cae_vad  deviceio  eq_drc_process  iflytekSDK  ipc_share_memory  ladspaSDK  libcutils  recoverySystem  rk_hw_vad  security  wakeWordAgent
git_rockchip/DuerClientSDK/: CMakeLists.txt  build.sh
git_rockchip/DuerClientSDK/DCSApp/include/DCSApp/: ActivityMonitorSingleton.h  ApplicationManager.h  DCSApplication.h  DeviceIoWrapper.h  VoiceAndTouchWakeUpObserver.h
git_rockchip/DuerClientSDK/DCSApp/include/MediaPlayer/Impl/: AudioDecoder.h  Mp3FilePlayerImpl.h  Mp3TtsPlayerImpl.h  Mp3UrlPlayerImpl.h
git_rockchip/DuerClientSDK/DCSApp/src/: ActivityMonitorSingleton.cpp  ApplicationManager.cpp  CMakeLists.txt  Configuration.cpp  DCSApplication.cpp  DeviceIoWrapper.cpp  DuerLinkMtkInstance.cpp  DuerLinkWrapper.cpp  SoundController.cpp  VoiceAndTouchWakeUpObserver.cpp  get_event.cpp  main.cpp
git_rockchip/DuerClientSDK/DCSApp/src/Dlna/: DlnaDmrUpnpDevice.cpp
git_rockchip/DuerClientSDK/DCSApp/src/MediaPlayer/Impl/: AlsaController.cpp  AudioDecoder.cpp  Mp3FilePlayerImpl.cpp  Mp3TtsPlayerImpl.cpp  Mp3UrlPlayerImpl.cpp  PcmBufPool.cpp  PcmTtsPlayerImpl.cpp
git_rockchip/DuerClientSDK/DCSApp/src/MediaPlayer/Proxy/: AlertsPlayerProxy.cpp  BlueToothPlayerProxy.cpp  LocalPlayerProxy.cpp  LocalTtsProxy.cpp  MediaPlayerProxy.cpp  TtsPlayerProxy.cpp
git_rockchip/DuerClientSDK/Framework/: CMakeLists.txt
git_rockchip/DuerClientSDK/Framework/DeviceIo/include/DeviceIo/: DeviceIo.h
git_rockchip/DuerClientSDK/Framework/DeviceIo/src/: CMakeLists.txt
git_rockchip/DuerClientSDK/Framework/DeviceIo/src/linux/: DeviceIo.cpp  InfoLed.cpp
git_rockchip/DuerClientSDK/Framework/Timer/include/Timer/: Timer.h
git_rockchip/DuerClientSDK/SocketApp/: CMakeLists.txt
git_rockchip/DuerClientSDK/SocketApp/include/: socket_app.h
git_rockchip/DuerClientSDK/SocketApp/src/: socket_app.cpp
git_rockchip/DuerClientSDK/resources32/: config.json  esis_vad_test.pkg
git_rockchip/DuerClientSDK/resources64/: config.json
git_rockchip/DuerClientSDK/sdk/include/DcsSdk/: ApplicationImplementation.h  DcsSdk.h  LocalMediaPlayerInterface.h  MediaPlayerInterface.h  Stream.h
git_rockchip/DuerClientSDK/sdk/include/LoggerUtils/: Logger.h
git_rockchip/DuerClientSDK/sdk/include/duer_link/: duer_link_sdk.h
git_rockchip/DuerClientSDK/sdk/include/duer_link/device_ctrl_observer/: duer_link_http2_connection_observer.h
git_rockchip/DuerClientSDK/third/include64/openssl/: opensslconf.h
git_rockchip/DuerClientSDK/third/lib64/: libavdevice.so.57.1.100  libavfilter.so.6.65.100  libavformat.so.57.56.101  libavutil.so.55.34.101  libcharset.la  libcrypto.so.1.0.0  libcurl.la  libcurl.so.4.4.0  libiconv.la  libnghttp2.la  libportaudio.la  libsqlite3.la  libswresample.so.2.3.100  libswscale.so.4.2.100
git_rockchip/app/: readme
git_rockchip/deviceio/DeviceIO/include/DeviceIo/: BtsrcParameter.h  DeviceIo.h  RkBle.h  RkBtMaster.h  RkBtSink.h  RkBtSpp.h  Rk_audio.h  Rk_battery.h  Rk_key.h  Rk_led.h  Rk_system.h  bt_hal.h
git_rockchip/deviceio/librkmediaplayer/source/include/DeviceIo/: RK_mediaplayer.h
git_rockchip/eq_drc_process/: eq_drc_process
git_rockchip/iflytekSDK/src/: audio_process.cpp
